--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 
+server.port=3000
+
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
