--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@
 #spring.jpa.show-sql=true
 
 server.port=3000
+springdoc.swagger-ui.path=/swagger-ui.html
+logging.level.org.springframework.web=DEBUG
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
