--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,6 @@
-#spring.datasource.url=jdbc:postgresql://aws-0-eu-central-1.pooler.supabase.com:5432/postgres?user=postgres.xelkkhrsfmzjnsvstgrh&password=Gf[fqrfrcerf08071997$%&
-#spring.datasource.username=your_username
-#spring.datasource.password=your_password
-#
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+spring.profiles.active=dev
+info.env.enabled=true
 
-server.port=3000
-springdoc.swagger-ui.path=/swagger-ui.html
-logging.level.org.springframework.web=DEBUG
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+info.application.name=finbots-main-backend
+info.application.description=Main FinBots backend application
+info.application.author=Evgenii Trigubov
