FIB-96: edit environments

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -2,7 +2,7 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-spring.jpa.database-platform=${DB_PLATFORM}
+spring.datasource.driverClassName=${DB_DRIVER_CLASS_NAME}
 spring.jpa.hibernate.ddl-auto=${DB_HIBERNATE_DDL_AUTO}
 spring.jpa.show-sql=${DB_SHOW_SQL}
 
