FIB-96: add spring-dotenv

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,5 +7,5 @@ spring.jpa.hibernate.ddl-auto=${DB_HIBERNATE_DDL_AUTO}
 spring.jpa.show-sql=${DB_SHOW_SQL}
 
 server.port=${SERVER_PORT}
-springdoc.swagger-ui.path={SWAGGER_UI_PATH}
-logging.level.org.springframework.web={LOGGING_LEVEL}
+springdoc.swagger-ui.path=${SWAGGER_UI_PATH}
+logging.level.org.springframework.web=${LOGGING_LEVEL}
