FIB-105: add Dockerfile and edit properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,9 +3,11 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
 spring.datasource.driverClassName=${DB_DRIVER_CLASS_NAME}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=${DB_HIBERNATE_DDL_AUTO}
 spring.jpa.show-sql=${DB_SHOW_SQL}
 
 server.port=${SERVER_PORT}
 springdoc.swagger-ui.path=${SWAGGER_UI_PATH}
 logging.level.org.springframework.web=${LOGGING_LEVEL}
+logging.level.org.springframework.security=${LOGGING_LEVEL}
