--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # change profile name to demo, if you want to run the application in demo mode
-spring.profiles.active=dev
+spring.profiles.active=demo
 info.env.enabled=true
 
 info.application.name=finbots-main-backend
