--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -3,9 +3,11 @@ spring.datasource.username=sa
 spring.datasource.password=password
 
 spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 
 server.port=3000
 springdoc.swagger-ui.path=/swagger-ui.html
 logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
